Fixed text-overflow mentor remarks

--- a/css/style.css
+++ b/css/style.css
@@ -514,6 +514,10 @@ a
   font-size: 24px;
   line-height: 30px;
   margin: 0;
+  max-width: 175px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .promo-block article:not(.hidden)
@@ -530,6 +534,9 @@ a
   display: block;
   padding: 10px;
   width: 135px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .promo-block .button-promo:hover
@@ -564,6 +571,7 @@ a
   line-height: 36px;
   text-transform: uppercase;
   margin-bottom: 5px;
+  max-width: none;
 }
 
 .slider p
